force-app/main/default/objects/Livraison__c/fields/Adresse__c.field-meta.xml
<CustomField>
    <fullName>Adresse__c</fullName>
    <label>Adresse</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>