force-app/main/default/objects/Livraison__c/fields/CodePostal__c.field-meta.xml
<CustomField>
    <fullName>CodePostal__c</fullName>
    <label>Code Postal</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>