force-app/main/default/objects/Livraison__c/fields/DateReception__c.field-meta.xml
<CustomField>
    <fullName>DateReception__c</fullName>
    <label>Date de Reception</label>
    <type>DateTime</type>
</CustomField>