force-app/main/default/objects/Livraison__c/fields/DateReceptionEstimee__c.field-meta.xml
<CustomField>
    <fullName>DateReceptionEstimee__c</fullName>
    <label>Date de Reception Estimee</label>
    <type>DateTime</type>
</CustomField>