force-app/main/default/objects/Livraison__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Livraisons</relationshipLabel>
    <relationshipName>Livraisons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>