force-app/main/default/objects/Livraison__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>