force-app/main/default/objects/Livraison__c/fields/StatutLivraison__c.field-meta.xml
<CustomField>
    <fullName>StatutLivraison__c</fullName>
    <label>Statut Livraison</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente</fullName>
                <default>true</default>
                <label>En attente</label>
            </value>
            <value>
                <fullName>En préparation</fullName>
            </value>
            <value>
                <fullName>Expédiée</fullName>
            </value>
            <value>
                <fullName>Livrée</fullName>
            </value>
            <value>
                <fullName>Échouée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>